--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label for="fechaIngreso">Fecha de Ingreso:</label>
-                        <input type="text" id="fechaIngreso" name="fechaIngreso">
+                        <input type="date" id="fechaIngreso" name="fechaIngreso">
                     </div>
                 </div>
                 <div class="col">
