--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label for="rdsResponsable">RDS Responsable:</label>
-                        <select id="sistemaOperativo" name="sistemaOperativo">
+                        <select id="rdsResponsable" name="rdsResponsable">
                             <option value="">Seleccione...</option>
                             <option value="N/A">N/A</option>
                             <option value="Juan José Álvarez Herrera">Juan José Álvarez Herrera</option>
